# daily_paper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily_digest.yml
config/: topics.yaml
reports/daily/: 2026-04-13.json  2026-04-13.md  2026-04-14.json  2026-04-14.md  2026-04-15.json  2026-04-15.md  2026-04-16.json  2026-04-16.md  2026-04-17.json  2026-04-17.md  2026-04-18.json  2026-04-18.md  2026-04-19.json  2026-04-19.md  2026-04-20.json  2026-04-20.md  2026-04-21.json  2026-04-21.md  2026-04-22.json  2026-04-22.md  2026-04-23.json  2026-04-23.md  2026-04-24.json  2026-04-24.md  2026-04-25.json  2026-04-25.md  2026-04-26.json  2026-04-26.md  2026-04-27.json  2026-04-27.md  2026-04-28.json  2026-04-28.md  2026-04-29.json  2026-04-29.md  2026-04-30.json  2026-04-30.md  2026-05-01.json  2026-05-01.md  2026-05-02.json  2026-05-02.md  (+4 more)
reports/monthly/: 2026-04.json  2026-04.md
reports/weekly/: 2026-W16.json  2026-W16.md  2026-W17.json  2026-W17.md  2026-W18.json  2026-W18.md
src/daily_paper/: __main__.py  aggregate.py  classification.py  cli.py  config.py  env.py  llm.py  models.py  pipeline.py  render.py  utils.py
src/daily_paper/sources/: arxiv.py  huggingface.py
templates/: daily_report_template.md  paper_card_full_template.md  paper_card_lite_template.md  period_report_template.md
tests/: test_aggregate.py  test_classifier.py  test_daily_llm_patch.py  test_llm.py  test_render.py
